--- a/package.json
+++ b/package.json
@@ -57,8 +57,9 @@
     "steal-tools": "^2.0.3"
   },
   "dependencies": {
-    "animate.css": "^3.6.1",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "axios": "^0.18.0",
+    "bulma": "^0.7.2",
     "can-component": "^4.4.2",
     "can-define": "^2.5.3",
     "can-dom-data": "^1.0.1",
@@ -68,8 +69,6 @@
     "can-view-model": "^4.0.1",
     "dropzone": "^5.5.1",
     "flatpickr": "^4.5.1",
-    "font-awesome": "^4.7.0",
-    "spectre.css": "^0.5.3",
     "steal": "^2.1.1",
     "sweetalert2": "^7.26.10"
   },
