--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "can-debug": "^2.0.1",
     "can-fixture": "^3.0.0",
     "can-realtime-rest-model": "^1.0.0",
+    "can-route": "^4.4.6",
+    "can-stache-route-helpers": "^1.1.3",
     "can-super-model": "^1.0.1",
     "can-view-autorender": "^5.0.1",
     "eslint": "^5.2.0",
@@ -60,6 +62,7 @@
     "@fortawesome/fontawesome-free": "^5.5.0",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "bulma-checkradio": "^2.1.0",
     "can-component": "^4.4.2",
     "can-define": "^2.5.3",
     "can-dom-data": "^1.0.1",
