--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test": "jest",
     "build": "steal-tools",
     "live": "steal-tools live-reload --main can-bulma/demo/index",
-    "serve-docs": "documentation serve --config documentation.yml --watch",
-    "docs": "documentation build --config documentation.yml -o docs -f html",
+    "serve-docs": "documentation serve --watch",
+    "docs": "documentation build -o docs -f html",
     "postdocs": "node docs-bundle",
     "prepublish-docs": "git checkout gh-pages && git merge master && npm run docs",
     "publish-docs": "git add docs -f && git commit -m docs && git push origin gh-pages -f && git checkout master",
@@ -54,7 +54,8 @@
     "steal-css": "^1.3.2",
     "steal-less": "^1.3.1",
     "steal-stache": "^4.1.2",
-    "steal-tools": "^2.0.3"
+    "steal-tools": "^2.0.3",
+    "system-text": "^0.1.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
