--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
   "author": "roemhildtg",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
     "can-connect": "^3.0.1",
     "can-debug": "^2.0.5",
     "can-fixture": "^3.0.0",
@@ -49,7 +52,7 @@
     "can-super-model": "^1.0.1",
     "can-view-autorender": "^5.0.1",
     "eslint": "^5.2.0",
-    "jest": "^23.4.1",
+    "jest": "^24.1.0",
     "json-pretty-html": "^1.1.2",
     "steal-css": "^1.3.2",
     "steal-less": "^1.3.1",
@@ -69,7 +72,6 @@
     "can-stache-converters": "^4.2.5",
     "can-util": "^3.12.0",
     "can-view-model": "^4.0.1",
-    "dropzone": "^5.5.1",
     "flatpickr": "^4.5.1",
     "steal": "^2.1.1",
     "sweetalert2": "^7.26.10"
@@ -85,6 +87,14 @@
     ]
   },
   "jest": {
-    "collectCoverage": true
+    "collectCoverage": true,
+    "verbose": true,
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "transformIgnorePatterns": [
+      ".+\\.stache",
+      "/node_modules/"
+    ]
   }
 }
