--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "can-super-model": "^1.0.1",
     "can-view-autorender": "^5.0.1",
     "eslint": "^5.2.0",
+    "http-server": "^0.11.1",
     "jest": "^24.1.0",
     "json-pretty-html": "^1.1.2",
     "steal-css": "^1.3.2",
@@ -68,6 +69,7 @@
     "can-component": "^4.4.2",
     "can-define": "^2.5.3",
     "can-dom-data": "^1.0.1",
+    "can-rest-model": "^1.1.0",
     "can-stache": "^4.12.0",
     "can-stache-converters": "^4.2.5",
     "can-util": "^3.12.0",
