--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/roemhildtg/can-bulma.git"
   },
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "watch": {
     "docs": {
       "patterns": [
