--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
+    "@babel/runtime": "^7.5.5",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "can-connect": "^3.0.1",
@@ -53,7 +55,7 @@
     "can-view-autorender": "^5.0.1",
     "eslint": "^5.2.0",
     "http-server": "^0.11.1",
-    "jest": "^24.1.0",
+    "jest": "^24.8.0",
     "json-pretty-html": "^1.1.2",
     "steal-css": "^1.3.2",
     "steal-less": "^1.3.1",
