--- a/package.json
+++ b/package.json
@@ -37,48 +37,47 @@
   "author": "roemhildtg",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/runtime": "^7.5.5",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
-    "can-connect": "^3.0.1",
-    "can-debug": "^2.0.5",
-    "can-fixture": "^3.0.0",
-    "can-realtime-rest-model": "^1.0.0",
-    "can-route": "^4.4.6",
-    "can-stache-route-helpers": "^1.1.3",
-    "can-super-model": "^1.0.1",
-    "can-view-autorender": "^5.0.1",
-    "eslint": "^5.2.0",
-    "http-server": "^0.11.1",
-    "jest": "^24.8.0",
-    "json-pretty-html": "^1.1.2",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
+    "can-connect": "^4.0.1",
+    "can-debug": "^2.0.7",
+    "can-fixture": "^3.1.7",
+    "can-realtime-rest-model": "^2.0.0",
+    "can-route": "^5.0.2",
+    "can-stache-route-helpers": "^2.0.0",
+    "can-super-model": "^2.0.0",
+    "can-view-autorender": "^6.0.0",
+    "eslint": "^6.8.0",
+    "http-server": "^0.12.1",
+    "jest": "^25.1.0",
+    "json-pretty-html": "^1.1.6",
     "steal-css": "^1.3.2",
-    "steal-less": "^1.3.1",
-    "steal-stache": "^4.1.2",
-    "steal-tools": "^2.0.3",
+    "steal-less": "^1.3.4",
+    "steal-stache": "^5.0.0",
+    "steal-tools": "^2.2.5",
     "system-text": "^0.1.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.5.0",
-    "axios": "^0.19.0",
-    "bulma": "^0.7.2",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "axios": "^0.19.2",
+    "bulma": "^0.8.0",
     "bulma-checkradio": "^2.1.0",
-    "can-component": "^4.4.2",
-    "can-define": "^2.5.3",
-    "can-dom-data": "^1.0.1",
-    "can-rest-model": "^1.1.0",
-    "can-stache": "^4.12.0",
-    "can-stache-converters": "^4.2.5",
-    "can-util": "^3.12.0",
-    "can-view-model": "^4.0.1",
-    "flatpickr": "^4.5.1",
-    "steal": "^2.1.1",
-    "sweetalert2": "^7.26.10"
+    "can-component": "^5.0.0",
+    "can-define": "^2.8.0",
+    "can-dom-data": "^1.0.3",
+    "can-rest-model": "^2.0.0",
+    "can-stache": "^5.1.1",
+    "can-stache-converters": "^5.0.0",
+    "can-util": "^3.14.0",
+    "can-view-model": "^4.0.3",
+    "flatpickr": "^4.6.3",
+    "steal": "^2.2.4"
   },
   "steal": {
     "configDependencies": [
